--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,38 @@
-imbalanced-learn==0.14.0
+absl-py==2.3.1
+blinker==1.9.0
+click==8.3.0
+filelock==3.20.0
+Flask==3.1.2
+fsspec==2025.9.0
+h5py==3.15.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
 joblib==1.5.2
-numpy==2.3.3
-pandas==2.3.2
+keras==3.11.3
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+ml_dtypes==0.5.3
+mpmath==1.3.0
+namex==0.1.0
+networkx==3.5
+numpy==2.3.4
+optree==0.17.0
+packaging==25.0
+pandas==2.3.3
+plyer==2.1.0
+Pygments==2.19.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
+rich==14.2.0
 scapy==2.6.1
 scikit-learn==1.7.2
 scipy==1.16.2
+setuptools==80.9.0
 six==1.17.0
+sympy==1.14.0
 threadpoolctl==3.6.0
+torch==2.9.0
+typing_extensions==4.15.0
 tzdata==2025.2
-plyer==2.1.0
-flask==3.1.2
+Werkzeug==3.1.3
